calico-network-policies/use-external-networks-rules-in-policy.yaml
apiVersion: projectcalico.org/v3
kind: NetworkPolicy
metadata:
  name: allow-egress-external
  namespace: production
spec:
  selector:
    color == 'red'
  types:
    - Egress
  egress:    
    - action: Allow
      destination:
        nets:
        - 192.30.252.0/22
        - 185.199.108.0/22
        - 140.82.112.0/20
        - 143.55.64.0/20
        - 2a0a:a440::/29
        - 2606:50c0::/32
        - 13.230.158.120/32
        - 18.179.245.253/32
        - 52.69.239.207/32
        - 13.209.163.61/32
        - 54.180.75.25/32
        - 13.233.76.15/32
        - 13.234.168.60/32
        - 13.250.168.23/32
        - 13.250.94.254/32
        - 54.169.195.247/32
        - 13.236.14.80/32
        - 13.238.54.232/32
        - 52.63.231.178/32
        - 18.229.199.252/32
        - 54.207.47.76/32
        - 20.201.28.148/32
        - 20.205.243.168/32
        - 102.133.202.248/32
